--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,7 +21,7 @@
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: #000000; /* The default color of the main navmenu links */
-  --nav-hover-color: #ff4a17; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-hover-color: #c; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #444444; /* Used for navigation links of the dropdown items in the navigation menu. */
@@ -254,6 +254,20 @@ h6 {
 }
 .border-t{
   border-top: 1px solid #f0f0f0
+}
+.btn-actions{
+  background-color: rgba(240,240,240,0.2);
+  color: var(--contrast-color);
+  width: 32px;
+  height: 32px;
+  font-size: 22px;
+  line-height: 19px;
+  padding: 0;
+}
+.btn-actions:hover{
+  background-color: rgba(240,240,240,0.3);
+  color: var(--contrast-color);
+
 }
 /*--------------------------------------------------------------
 # Global Header
@@ -2225,6 +2239,9 @@ section,
   text-transform: uppercase;
   font-weight: 700;
 }
+.role-calculator .accordion-body{
+  padding: 24px 0 0;
+}
 .role-calculator .accordion-item{
   background-color: transparent;
   border: 0px;
@@ -2261,8 +2278,51 @@ section,
   background-image: url(../img/radio-bg.svg);
   border-color: #fff;
   background-size: 10px;
-
 }
+
+.role-calculator .accordion-body .form-check-input[type="radio"]:checked+.form-check-label{
+  font-weight: 700;
+}
+.role-calculator .form-check-label{
+  font-size: 12px;
+  line-height: 2;
+  color: var(--contrast-color)
+}
+.role-calculator .form-label{
+  font-size: clamp(12px, 1.25vw + 0.25rem, 14px);
+  line-height: 1.8;
+  color: var(--contrast-color)
+}
+.role-calculator .values{
+  font-size: 18px;
+  color: var(--contrast-color);
+  line-height: 1.333;
+  font-weight: 700;
+}
+
+.role-calculator .card p{
+  font-size: clamp(12px, 1.25vw + 0.25rem, 14px);
+line-height: 14px;
+color: var(--default-color);
+margin-bottom: 0px;
+}
+
+.role-calculator .card p.small{
+  font-size: 12px;
+  line-height: 14px;
+  color: var(--default-color)
+}
+.role-calculator .card h3{
+  font-size: clamp(18px, 1.5vw + 1rem, 22px);
+  line-height: 24px;
+  color: var(--default-color);
+}
+.role-calculator .card h2{
+  font-size: clamp(26px, 1.5vw + 1rem, 28px);
+  line-height: clamp(24px, 1.2vw + 1rem, 28px);
+  color: var(--accent-color);
+}
+
 .form-range::-webkit-slider-thumb{
   background: #fff;
   border: 1px solid #2DE65E
@@ -2271,6 +2331,23 @@ section,
   background: #fff;
   border: 1px solid #2DE65E
 }
+.role-calculator .cta-btn,
+.role-calculator .cta-btn:focus {
+  color: var(--default-color);
+  width: fit-content;
+  background: transparent;
+  margin-top: 56px;
+}
+.role-calculator .cta-btn:hover, .role-calculator .cta-btn:focus:hover{
+  background-color: var(--accent-color);
+  color: var(--contrast-color)
+}
+.role-calculator .accordion-body h4{
+  color: var(--contrast-color);
+  font-size: 18px;
+  line-height: 1.3333;
+}
+
 /*--------------------------------------------------------------
 # Apply now Section
 --------------------------------------------------------------*/
