animation and bug fixes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,7 +21,7 @@
 /* Nav Menu Colors - The following color variables are used specifically for the navigation menu. They are separate from the global colors to allow for more customization options */
 :root {
   --nav-color: #000000; /* The default color of the main navmenu links */
-  --nav-hover-color: #c; /* Applied to main navmenu links when they are hovered over or active */
+  --nav-hover-color: #ff4a17; /* Applied to main navmenu links when they are hovered over or active */
   --nav-mobile-background-color: #ffffff; /* Used as the background color for mobile navigation menu */
   --nav-dropdown-background-color: #ffffff; /* Used as the background color for dropdown items that appear when hovering over primary navigation items */
   --nav-dropdown-color: #444444; /* Used for navigation links of the dropdown items in the navigation menu. */
@@ -78,11 +78,11 @@
 
 @font-face {
   font-family: "Bebas Neue Pro";
-  src: url("BebasNeuePro-Bold.eot");
-  src: url("BebasNeuePro-Bold.eot?#iefix") format("embedded-opentype"),
-    url("BebasNeuePro-Bold.woff2") format("woff2"),
-    url("BebasNeuePro-Bold.woff") format("woff"),
-    url("BebasNeuePro-Bold.ttf") format("truetype");
+  src: url("../fonts/BebasNeuePro-Bold.eot");
+  src: url("../fonts/BebasNeuePro-Bold.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/BebasNeuePro-Bold.woff2") format("woff2"),
+    url("../fonts/BebasNeuePro-Bold.woff") format("woff"),
+    url("../fonts/BebasNeuePro-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -92,6 +92,7 @@ body {
   color: var(--default-color);
   background-color: var(--background-color);
   font-family: var(--default-font);
+  overflow-x: hidden;
 }
 
 a {
@@ -174,17 +175,21 @@ h6 {
   cursor: pointer;
 }
 
-.cta-btn:hover,
-.cta-btn:focus:hover {
+.cta-btn.cta-btn-b:hover,
+.cta-btn.cta-btn-b:focus:hover {
   color: var(--contrast-color);
   background: var(--accent-color);
   border-color: var(--accent-color);
 }
 
-.cta-btn .bi::before {
-  font-size: 14px;
-  vertical-align: -0.3em;
+.cta-btn.cta-btn-w:hover,
+.cta-btn.cta-btn-w:focus:hover {
+  color: var(--default-color);
+  background: var(--accent-color);
+  border-color: var(--accent-color);
 }
+
+
 
 @media (max-width: 767px) {
   .cta-btn,
@@ -271,36 +276,43 @@ h6 {
 }
 
 .down-arrow-a {
-  width: 100;
+  width: 60px;
   height: auto;
 }
 
 .down-arrow-a path {
-  fill: #ec5d25;
+  opacity: 0;
   transform-origin: center;
-  opacity: 0.9;
 }
 
 .down-arrow-a.white path {
   fill: #d9d9d9;
 }
 
-.marquee {
+.marquee-container {
   width: 100%;
   overflow: hidden;
-  white-space: nowrap;
   position: absolute;
-  top: 25.486vh;
-  z-index: 0;
+  padding: 20px 0;
+  top: 151px;
+  z-index: 9;
 }
 
-.marquee path {
-  stroke-dasharray: 2000;
-  stroke-dashoffset: 2000;
-  stroke: #fcca46;
-  stroke-opacity: 0.4;
-  stroke-width: 1.5;
-  fill: none;
+.marquee-track {
+  display: flex;
+  width: max-content;
+}
+
+.marquee-item {
+  flex-shrink: 0;
+  margin-right: 60px;
+  height: 100px;
+}
+.logo-bg {
+  position: absolute;
+  left: 0;
+  bottom: 20px;
+  z-index: 0;
 }
 .logo-bg svg {
   width: 723px;
@@ -308,13 +320,13 @@ h6 {
 }
 
 .logo-bg svg path {
-  stroke: #D9D9D9;
-      stroke-width: 1;
-      stroke-opacity: 0;
-      fill: #D9D9D9;
-      fill-opacity: 0;
-      stroke-dasharray: 1000;
-      stroke-dashoffset: 1000;
+  stroke: #d9d9d9;
+  stroke-width: 1;
+  stroke-opacity: 0;
+  fill: #d9d9d9;
+  fill-opacity: 0;
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
 }
 
 .type-container {
@@ -376,7 +388,7 @@ h6 {
 
 .header .cta-btn:hover,
 .header .cta-btn:focus:hover {
-  color: var(--default-color);
+  color: var(--contrast-color);
   background: var(--accent-color);
   border-color: var(--accent-color);
 }
@@ -492,7 +504,7 @@ h6 {
   .navmenu li:hover > a,
   .navmenu .active,
   .navmenu .active:focus {
-    color: color-mix(in srgb, var(--nav-color) 90%, white 15%);
+    color: var(--nav-hover-color);
   }
 
   .navmenu .dropdown ul {
@@ -745,16 +757,12 @@ h6 {
   color: var(--contrast-color);
   text-transform: uppercase;
 }
-
 .footer .footer-navmenu ul li a:hover {
   color: var(--accent-color);
 }
-.footer .footer-navmenu ul li a.cta-btn:hover {
-  color: var(--contrast-color);
-}
 
-.footer a.cta-btn,
-.footer a.cta-btn:focus {
+.footer .footer-navmenu ul li a.cta-btn,
+.footer .footer-navmenu ul li a.cta-btn:focus {
   color: var(--default-color);
   font-size: var(--font-12);
   padding: 7px 20px;
@@ -766,9 +774,9 @@ h6 {
   display: inline-block;
 }
 
-.footer a.cta-btn:hover,
-.footer a.cta-btn:focus:hover {
-  color: var(--contrast-color);
+.footer .footer-navmenu ul li a.cta-btn:hover,
+.footer .footer-navmenu ul li a.cta-btn:focus:hover {
+  color: #000000;
   background: var(--accent-color);
   border-color: var(--accent-color);
 }
@@ -989,7 +997,7 @@ section,
 
 .hero h2 {
   margin: 0;
-  font-size:38px;
+  font-size: 38px;
   font-weight: 700;
   text-transform: uppercase;
   color: var(--accent-color);
@@ -1008,7 +1016,7 @@ section,
 .hero p {
   color: var(--default-color);
   margin: 10px 0 0 0;
-   font-size: clamp(12px, 1.2vw, 14px);
+  font-size: clamp(12px, 1.2vw, 14px);
   line-height: clamp(100%, 1.5vw, 18px);
 }
 
@@ -1047,7 +1055,7 @@ section,
 .hero .svg-container {
   position: absolute;
   z-index: 9;
-  bottom: 3.5rem;
+  bottom: -1.5rem;
   right: 5.75rem;
   width: 90px;
   height: 232px;
@@ -1076,18 +1084,18 @@ section,
 
 .hero .video-form-container .content-wrap h6 {
   color: var(--contrast-color);
-  font-size: var(--font-18);
+  font-size: 18px;
   font-family: var(--default-font);
 }
 .hero .video-form-container .content-wrap p {
   color: var(--contrast-color);
-  font-size: var(--font-14);
+  font-size: clamp(12px, 1.5vw, 14px);
   font-family: var(--default-font);
 }
 
 .hero .form-label {
   color: var(--contrast-color);
-  font-size: var(--font-12);
+  font-size: clamp(12px, 2vw, 16px);
 }
 
 .hero .form-control {
@@ -1200,7 +1208,6 @@ section,
     font-size: 18px;
   }
   .hero p {
-    font-size: var(--font-sm-12);
     padding-right: 8%;
   }
   .hero .video-container {
@@ -1219,11 +1226,6 @@ section,
     margin: auto;
     top: -90px;
   }
-
-  .hero .video-form-container .content-wrap p,
-  .hero .form-label {
-    font-size: var(--font-sm-12);
-  }
 }
 
 @media (max-width: 992px) {
@@ -1236,7 +1238,9 @@ section,
 # About Section
 --------------------------------------------------------------*/
 .career {
-  padding: 112px 0 0;
+  padding: 80px 0 80px;
+  display: flex;
+  align-items: center;
 }
 
 .career h1,
@@ -1254,10 +1258,6 @@ section,
 .career .content-wrap {
   margin-top: 2.778vh;
 }
-.career .content-wrap2 {
-  padding-right: 33%;
-}
-
 .career .body-01 {
   font-weight: 600;
   font-family: var(--default-font);
@@ -1277,23 +1277,8 @@ section,
   width: 100%;
   object-fit: cover;
 }
-@media (max-width: 575.98px) {
-  .career .content-wrap2 {
-    width: 345px;
-  }
-}
+
 @media (max-width: 767px) {
-  .career .logo {
-    background-image: url(../img/logo-grey.svg);
-    background-position: 30% 80%;
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 27px;
-    height: 33px;
-    position: absolute;
-    top: 0;
-    right: 40px;
-  }
   .career h1 {
     font-size: var(--font-sm-38);
   }
@@ -1303,11 +1288,17 @@ section,
   .career .body-02 {
     font-size: var(--font-sm-18);
   }
-  .career .content-wrap {
-    padding-right: 29%;
+  .career .content-wrap{
+    width: 82%;
   }
-  .career .content-wrap2 {
-    padding-right: 2%;
+  .career .content-wrap2{
+    width: 63%;
+  }
+}
+
+@media (min-width: 767px){
+  .career .content-wrap{
+    width: 84%;
   }
 }
 /*--------------------------------------------------------------
@@ -1336,13 +1327,13 @@ section,
 .performers.section {
   background-image: url(../img/performers-bg.png);
   background-size: cover;
-  background-position: center;
+  background-position: center top;
   background-attachment: fixed;
   border-top-left-radius: 40px;
   overflow: visible;
-  min-height: 100vh;
   display: flex;
   align-items: center;
+  padding-top: 80px;
 }
 .performers h2 {
   font-family: var(--heading-font);
@@ -1350,6 +1341,7 @@ section,
   color: var(--contrast-color);
   text-transform: uppercase;
   line-height: 1;
+  font-weight: 700;
 }
 .performers .content-col1 {
   width: 100%;
@@ -1382,6 +1374,7 @@ section,
     left: inherit;
     right: 40px;
     transform: translateX(0);
+    z-index: 9;
   }
   .performers h2 {
     font-size: var(--font-sm-28);
@@ -1402,6 +1395,8 @@ section,
   background-attachment: fixed;
   border-top-left-radius: 40px;
   overflow: visible;
+  align-items: center;
+  display: flex;
 }
 .brands h2 {
   font-family: var(--heading-font);
@@ -1444,7 +1439,6 @@ section,
 --------------------------------------------------------------*/
 
 .clients.section {
-  height: calc(100vh - 219px);
   display: flex;
   align-items: center;
   position: relative;
@@ -1455,54 +1449,48 @@ section,
 .clients h2,
 .clients .h2 {
   font-family: var(--heading-font);
-  font-size: var(--font-48);
+  font-size: clamp(28px, 5vw, 48px);
   color: var(--accent-color);
   text-transform: uppercase;
+  line-height: 1;
+  font-weight: 700;
+  margin-bottom: 0;
+}
+.clients .type-container{
+  margin-top: 20px;
 }
 .clients p {
-  font-size: var(--font-16);
+  font-size: 16px;
+  font-family: var(--default-font);
 }
 
 .clients p strong {
-  font-size: var(--font-12);
-}
-.clients .logo-bg {
-  position: absolute;
-  left: 0;
-  bottom: 20px;
-  z-index: 0;
+  font-size: 12px;
 }
 
-.clients.cta-btn{
-    opacity: 0;
-    transform: translateY(20px);
-    pointer-events: none;
-}
-.clients.cta-btn.show {
-    pointer-events: all;
-  }
 
-@media (max-width: 767px) {
-  .clients h2 {
-    font-size: var(--font-sm-28);
-  }
-  .clients p {
-    font-size: var(--font-sm-16);
-  }
-
-  .clients p strong {
-    font-size: var(--font-sm-12);
-  }
+.clients.cta-btn {
+  opacity: 0;
+  transform: translateY(20px);
 }
+#quotes{
+  opacity: 0;
+  width: 27px;
+}
+
 /*--------------------------------------------------------------
 # Earnings Section
 --------------------------------------------------------------*/
+.earning.section{
+  display: flex;
+  align-items: center;
+}
 .earning .scroll-pane .item {
   width: 200px;
 }
 .earning h2 {
   font-family: var(--heading-font);
-  font-size: var(--font-48);
+  font-size: clamp(28px, 5vw, 48px);
   color: var(--accent-color);
   text-transform: uppercase;
 }
@@ -1554,47 +1542,40 @@ section,
 --------------------------------------------------------------*/
 .professional.section {
   border-top-left-radius: 40px;
-  background-color: var(--accent-color);
   position: relative;
   background-image: url(../img/professional-bg.png);
-  background-size: contain;
+  background-size: cover;
   background-position: bottom center;
   background-repeat: no-repeat;
   padding-bottom: 0;
+  display: flex;
+  align-items: center;
 }
 .professional h2 {
   font-family: var(--heading-font);
   color: var(--contrast-color);
-  font-size: var(--font-46);
+  font-size: clamp(28px, 4.5vw, 46px);
   line-height: 1;
   text-transform: uppercase;
 }
 .professional p {
   font-family: var(--default-font);
-  font-size: var(--font-16);
+  font-size: clamp(12px, 2vw, 16px);
   color: var(--contrast-color);
   line-height: 100%;
 }
-@media (max-width: 768px) {
-  .professional h2 {
-    font-size: var(--font-sm-28);
-  }
-  .professional p {
-    font-size: var(--font-sm-12);
-  }
-}
-
 /*--------------------------------------------------------------
 # Professional Section
 --------------------------------------------------------------*/
 
 .forge.section {
   background-color: var(--default-color);
+  padding: 105px 0 90px;
 }
 .forge h2 {
   font-family: var(--heading-font);
   color: var(--contrast-color);
-  font-size: var(--font-46);
+  font-size: 28px;
   line-height: 1;
   text-transform: uppercase;
 }
@@ -1608,11 +1589,11 @@ section,
 .forge p {
   font-family: var(--default-font);
   color: var(--contrast-color);
-  font-size: var(--font-16);
+  font-size: 16px;
   line-height: 1;
 }
 .forge p.lead {
-  font-size: var(--font-22);
+  font-size: 22px;
   line-height: 1;
 }
 .forge-box {
@@ -1680,7 +1661,7 @@ section,
   width: 100%;
   background-color: var(--accent-color);
   border-bottom-right-radius: 40px;
-  padding: 45px 45px 45px 50px;
+  padding: 45px 126px 45px 50px;
 }
 
 .portfolio h2 {
@@ -1722,7 +1703,7 @@ section,
   width: 100%;
   background-color: var(--default-color);
   border-bottom-right-radius: 40px;
-  padding: 45px 45px 45px 50px;
+  padding: 45px 118px 45px 50px;
 }
 
 .team-support h2 {
@@ -1731,6 +1712,7 @@ section,
   font-size: var(--font-46);
   line-height: 1;
   text-transform: uppercase;
+  font-weight: 700;
 }
 .team-support p {
   font-family: var(--default-font);
@@ -1753,7 +1735,11 @@ section,
 # League Section
 --------------------------------------------------------------*/
 .league.section {
-  background-color: var(--default-color);
+  background-image: url(../img/chipr-section-bg.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
 }
 .league h2 {
   font-family: var(--heading-font);
@@ -1762,6 +1748,7 @@ section,
   line-height: 1;
   text-transform: uppercase;
   margin-bottom: 3.125rem;
+  font-weight: 700;
 }
 .league h6 {
   font-family: var(--heading-font);
@@ -1829,6 +1816,11 @@ section,
   }
   .league p.lead {
     font-size: var(--font-sm-16);
+  }
+}
+@media (min-width: 768px) {
+  .league.section{
+    padding: 90px 0 135px
   }
 }
 
