--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1924,7 +1924,7 @@ section,
   padding: 2.25rem;
   display: flex;
   flex-flow: column;
-  align-items: center;
+  align-items: self-start;
   justify-content: space-between;
 }
 .testimonials .quote-content-footer {
